# herbalizer

./: herbalizer.cabal  mise.toml
.claude/: settings.local.json
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Main.hs
test/: HerbalizerSpec.hs
